# fastapi-chat

./: .env.docker  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  test_websocket.html
alembic/: env.py
alembic/versions/: 04cb24c0563b_fix_uploaded_at_in_image.py  230e59e1c74e_add_admin_status_to_chat_user.py  23475d85932f_update_chat_message_user.py  2939df6452fb_add_is_active_field_to_user_add_email_.py  3a3fda7241d3_add_chat_user_relationship.py  4850b3f883ac_user_change_name_to_username_add_.py  577cb41c5e62_add_image.py  6e5b075a2e4e_init.py  71b807c25e16_add_chat_type_to_chat.py  9743ab255ab0_add_superuser_status_to_user.py  a0cd98e13fae_add_email_field_to_user.py  b1253d56eba3_make_user_id_field_unique_in_email_.py  ba1b4e04db45_add_chat_and_message.py  c1e3ab7772bc_add_email_verifications_table.py  c91a5d38b864_update_chat_message_user.py  ef420ff05103_add_send_at_field_to_email_verification.py
app_api/: Dockerfile  exception_handlers.py  main.py  run_test_server.py
app_api/admin/: router.py
app_api/auth/: router.py
app_api/chat/: router.py
app_api/media/: router.py
app_api/users/: router.py  (+1 more)
app_ws/: Dockerfile  main.py  rabbit_consumer.py  rabbit_manager.py  redis.py  router.py  schemas.py  services.py  utils.py  websocket_handlers.py  ws_manager.py
docs/: WEBSOCKET_API.md
shared/: celery.py  database.py  redis.py  settings.py
src/: database.py  main.py  settings.py
tests/: fixtures.py  settings.py  test_auth.py  test_chat.py  utils.py
(+82 files in other folders)
